# drf_p37

./: TODO  convert.json  convert.py  pyproject.toml  test.py  todo.json
apps/: admin.py  filters.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
apps/fixtures/: albums.json  comments.json  photos.json  posts.json  todos.json  users.json
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  exammodels.py  library.py  managers.py  models.py  users.py
root/: settings.py  urls.py
